# tracking-displacement

./: .gitignore  README.md  config.yaml  predict_config.yaml  preprocess.yaml  pyproject.toml  requirements.txt
displacement_tracker/: 00_tif_loader.py  01_coordinate_scanner.py  02_resample_h5.py  03_train_cnn.py  04_predict_json.py  05_evaluate_geojson.py  paired_image_dataset.py  simple_cnn.py
displacement_tracker/util/: deduplication.py  distance.py  env_loader.py  logging_config.py  tiff_predictions.py
displacement_tracker/visualization/: dataset_viewer.py  visualise_geojson.py  visualise_predictions.py  visualise_training_predictions.py
processing/: resample_h5.py
runs/20250927_211130/: best_model.pth
runs/20260129_084500/: best_model.pth
sanity_check/: testing.py
scrape_fa/: coordinate_scanner.py  dataset_viewer.py  evaluate_geojson.py  extract_labels.py  green_dash_detector.py  paired_image_dataset.py  predict.py  predict_json.py  predict_processed.py  selenium_access.py  show_overlay.py  simple_cnn.py  tif_loader.py  train_cnn.py  unet_model.py  visualise_predictions.py  visualise_training_predictions.py
scrape_fa/util/: logging_config.py
